objects/User.object
<CustomObject>
    <fields>
        <fullName>Additional_User_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if there are more than one user records for a user with using same email address. Custom Mass Email batch program uses this field to send emails</inlineHelpText>
        <label>Additional User Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Owner_for_Contact__c</fullName>
        <formula>Contact.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Owner for Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Program_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mozilla CA Program Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_User_Email_Same_As_Contact_Email__c</fullName>
        <formula>IF(Email = Contact.Email, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User Email Same As Contact Email?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_User_Name_Same_As_Contact_Name__c</fullName>
        <description>IF(AND(FirstName = Contact.FirstName, LastName = Contact.LastName), true, false)</description>
        <formula>IF(AND(FirstName = SUBSTITUTE(Contact.FirstName, &apos;**&apos;, &apos;&apos;), LastName = Contact.LastName), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is User Name Same As Contact Name?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Microsoft_CA_Program_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Microsoft CA Program Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Id_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Id (18 digit)</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsersExternal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>C,c</value>
        </filters>
        <label>Active Users - External</label>
    </listViews>
    <listViews>
        <fullName>ActiveUsersInternal</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CA_Program_Manager__c</columns>
        <columns>Microsoft_CA_Program_Manager__c</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Users - Internal</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers_Active</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Users - Active</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>DoNotAllowCAsToChangeProfileFields</fullName>
        <active>true</active>
        <description>Do not allow external users to update the profile fields</description>
        <errorConditionFormula>AND( 
OR(ISCHANGED(FirstName), 
   ISCHANGED(LastName), 
   ISCHANGED(Email)), 
TEXT($User.UserType) != &quot;Standard&quot;)</errorConditionFormula>
        <errorMessage>Please contact support@ccadb.org to make any changes to profile.</errorMessage>
    </validationRules>
</CustomObject>